--- a/ExpenseHead/src/main/webapp/resources/css/style.css
+++ b/ExpenseHead/src/main/webapp/resources/css/style.css
@@ -1,177 +1,180 @@
 /* CSS Document */
-body
-{
-   text-align:center;
-   background-image:url(../resources/images/bk.PNG);
-}
-#header
-{
-	position:fixed;
-	width:100%;
-	left:0px;
-	top:0px;
-    height:70px;
-	text-align:center;
-	background-color:#000000;
-}
-#container
-{
-   width:1060px;
-   margin:0 auto;
-}
-#logo
-{
-   position:fixed;
-   float:left;
-   text-align:center;
-   margin-top:10px;               
-}
-#leftContainer
-{
-	width:60%;
-    height:100%;
-	clear:both;
-	float:left;
-	position:relative;
-	right:40px;
-	text-align:left;
-	margin-top:17%;
-	z-index:-1;
-	  box-shadow:-10px 10px  30px 2px  #565555;
+body {
+	text-align: center;
+	background-image: url(../images/bk.PNG);
 }
 
-#rightContainer
-{
-	position:relative;
-	width:35%;
-    height:370px;
-	float:right;
-	left:20px;
-	background:#f5f5f5;
-	margin-top:14%;
-	border-radius:10px;
-	text-align:left;
-    box-shadow:5px 5px 20px #565555;
-	z-index:-1;
-	
-}
-button
-{
-	width:100%;
-	border:0px solid#b7b8b8;
-	height:58px;
-	font-size:18px;
-	background-color:#f1f1f1;
-	font-family:Century Gothics;
-}
-.input{
-	border-radius:3px;
-	width:280px;
-	height:25px;
-	border:1px solid#ccc;
-	font-size:15px;
-	text-align:center;
-}
-button:hover{
-	background-color:#0c739a;
-	color:#FFFFFF;
-}
-#loginbutton{
-	width:100%;
-	border-top-left-radius:10px;
-    border-top-right-radius:10px;
-	color:#ffffff;
-	background-color:#0c739a;
+#header {
+	position: fixed;
+	width: 100%;
+	left: 0px;
+	top: 0px;
+	height: 6em;
+	text-align: center;
+	background-color: #000000;
 }
 
-#justify{
-	position:relative;
-	left:40px;
-}
-#sbutton{
-	position:relative;
-	width:100px;
-	background-color:#0c739a;
-	color:#FFFFFF;
-	float:right;
-	right:85px;
-	border-radius:5px;
-	box-shadow:1px 1px 7px #000000;
-	height:35px;
-	top:0px;
-}
-#sbutton:hover
-{
-    background-color:#f1f1f1;
-	color:#0c739a;
-}
-.CC
-{
-   font-family:Century Gothic;
-   font-weight:500;
-   
-}
-#footer
-{	
-	clear:both;
-	position:absolute;
-    height:3%;
-	margin:0 auto;
-	background-color:#000000;
-    width:100%;
-	color:#a8a8a7;
-	font-size:75%;
-	text-align:center;
-	bottom:0px;
+#container {
+	width: 1060px;
+	margin: 0 auto;
 }
 
-#Register{
-	position:absolute;
-	top:20px;
-	right:140px;
-	width:100px;
-	height:30px;
-	background-color:#0c739a;
-	color:#FFFFFF;
-	border-radius:5px;
-}
-#AboutUs{
-	position:absolute;
-	top:20px;
-	right:280px;
-	width:100px;
-	height:30px;
-	background-color:#0c739a;
-	color:#FFFFFF;
-	border-radius:5px;
-}
-.headcolor{
-	position:absolute;
-	width:100%;
-	border:0px solid#b7b8b8;
-	height:58px;
-	background-color:#0c739a;
-	left:0px;
-}
-#Register:hover,#AboutUs:hover{
-	background-color:#999999;
-}
-#forgotPassword{
-	position:relative;
-	width:150px;
-	right:25px;
-	height:30px;
-	background:none;
-}
-#forgotPassword:hover{
-	color:#000000;
-	text-decoration:underline;
-}
-a{
-    color:#0c739a;
+#logo {
+	/*    position:fixed; */
+	float: left;
+	/*    text-align:center; */
+	margin-top: 0.4%;
+	margin-left: 2%;
 }
 
+#logo img {
+	height:
+}
 
+#leftContainer {
+	width: 56%;
+	height: 100%;
+	clear: both;
+	float: left;
+/* 	position: relative; */
+	right: 40px;
+	text-align: left;
+	margin-top: 17%;
+	z-index: -1;
+	box-shadow: -10px 10px 20px #565555;
+	-moz-box-shadow: -10px 10px 20px #565555;
+	-webkit-box-shadow: -10px 10px 20px #565555;
+}
 
+#rightContainer {
+/* 	position: relative; */
+	width: 35%;
+	height: 370px;
+	float: right;
+	left: 20px;
+	background: #f5f5f5;
+	margin-top: 14%;
+	border-radius: 10px;
+	text-align: left;
+	box-shadow: 5px 5px 20px #565555;
+	-moz-box-shadow: 5px 5px 20px #565555;
+	-webkit-box-shadow: 5px 5px 20px #565555;
+	z-index: -1;
+}
 
+button {
+	width: 100%;
+	border: 0px solid #b7b8b8;
+	height: 58px;
+	font-size: 18px;
+	background-color: #f1f1f1;
+	font-family: Century Gothics;
+	border-color: #f1f1f1;
+}
 
+.input {
+	border-radius: 3px;
+	width: 280px;
+	height: 25px;
+	border: 1px solid #ccc;
+	font-size: 15px;
+}
+
+button:hover {
+	background-color: #0c739a;
+	color: #FFFFFF;
+}
+
+#loginbutton {
+	width: 100%;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	color: #ffffff;
+	background-color: #0c739a;
+	border-color: #0c739a;
+}
+
+#justify {
+	position: relative;
+	left: 40px;
+}
+
+#sbutton {
+	position: relative;
+	width: 100px;
+	background-color: #0c739a;
+	border-color: #0c739a;
+	color: #FFFFFF;
+	float: right;
+	right: 85px;
+	border-radius: 5px;
+	height: 35px;
+	top: 0px;
+}
+/* #sbutton:hover */
+/* { */
+/*     background-color:#f1f1f1; */
+/* 	color:#0c739a; */
+/* } */
+.CC {
+	font-family: Century Gothic;
+	font-weight: 500;
+}
+
+#footer {
+	clear: both;
+	height: 5em;
+	margin: 0 auto;
+	background-color: #000000;
+	width: 100%;
+	color: #a8a8a7;
+	font-size: 75%;
+	text-align: center;
+	z-index: 1000;
+	bottom: 0px;
+	position: fixed;
+	left: 0;
+}
+
+#Register {
+	position: absolute;
+	top: 40%;
+	right: 140px;
+	width: 100px;
+	height: 30px;
+	background-color: #000;
+	color: #FFFFFF;
+	border-radius: 5px;
+}
+
+#AboutUs {
+	position: absolute;
+	top: 40%;
+	right: 280px;
+	width: 100px;
+	height: 30px;
+	background-color: #000;
+	color: #FFFFFF;
+	border-radius: 5px;
+}
+
+#Register:hover,#AboutUs:hover {
+	color: #073C9A;
+}
+
+#forgotPassword {
+	position: relative;
+	width: 150px;
+	right: 25px;
+	height: 30px;
+	background: none;
+}
+
+#forgotPassword:hover {
+	color: #000000;
+	text-decoration: underline;
+}
+
+a {
+	color: #0c739a;
+}
