--- a/ExpenseHead/src/main/webapp/resources/css/style.css
+++ b/ExpenseHead/src/main/webapp/resources/css/style.css
@@ -1,4 +1,75 @@
+/* radio button css */
+
+input[type=radio].css-checkbox {
+							position:absolute;
+							z-index:-1000;
+							left:-1000px;
+							overflow: hidden;
+							clip: rect(0 0 0 0);
+							height:1px; 
+							width:1px; 
+							margin:-1px; 
+							padding:0;
+							border:0;
+						}
+
+						input[type=radio].css-checkbox + label.css-label {
+							padding-left:27px;
+							height:22px; 
+							display:inline-block;
+							line-height:22px;
+							background-repeat:no-repeat;
+							background-position: 0 0;
+							font-size:22px;
+							vertical-align:middle;
+							cursor:pointer;
+
+						}
+
+						input[type=radio].css-checkbox:checked + label.css-label {
+							background-position: 0 -22px;
+						}
+						
+						label.css-label {
+				background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_db37635e39bf1d9e5476808b266ec787.png);
+				-webkit-touch-callout: none;
+				-webkit-user-select: none;
+				-khtml-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
+			}
+			
+/* end radio button css */
+
 /* CSS Document */
+
+.large-input-box{
+	width: 270px;
+height: 25px !important;
+border: 1px solid;
+border-color: rgba(0, 0, 0, 0.19) !important;
+}
+
+.input-box{
+	width: 220px;
+height: 25px !important;
+border: 1px solid;
+border-color: rgba(0, 0, 0, 0.19) !important;
+}
+
+.register-button{
+	color: white;
+border-radius: 4px;
+text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border-top-left-radius: 4px 4px;
+border-top-right-radius: 4px 4px;
+border-bottom-right-radius: 4px 4px;
+border-bottom-left-radius: 4px 4px;
+background: #65A6B8; /* this is a light blue */
+
+}
+
 body {
 	text-align: center;
 	background-image: url(../images/bk.PNG);
