--- a/ExpenseHead/src/main/webapp/resources/css/dashboard/css_dashboard.css
+++ b/ExpenseHead/src/main/webapp/resources/css/dashboard/css_dashboard.css
@@ -45,7 +45,7 @@ vertical-align: bottom;
 }
 
 .align-it {
-	margin-left: 15%;
+	float:left;
 	margin-top: 74px;
 	color: white;
 	text-decoration: none;
