--- a/ExpenseHead/src/main/webapp/resources/css/dashboard/css_dashboard.css
+++ b/ExpenseHead/src/main/webapp/resources/css/dashboard/css_dashboard.css
@@ -22,6 +22,9 @@
 	width: auto;
 }
 
+#header{
+	min-width: 1580px;
+}
 #footer {
 	clear: both;
 	height: 5em;
@@ -33,7 +36,7 @@
 	text-align: center;
 	z-index: 1000;
 	bottom: 0;
-	position: absolute;
+	position: relative;
 	left: 0;
 }
 
