Header UI Commit

--- a/ExpenseHead/src/main/webapp/resources/css/carousel/js-image-slider.css
+++ b/ExpenseHead/src/main/webapp/resources/css/carousel/js-image-slider.css
@@ -17,7 +17,7 @@
 
 #slider {
 	font-size:0;
-	background:#fff url(loading.gif) no-repeat 50% 50%;
+/* 	background:#fff url(loading.gif) no-repeat 50% 50%; */
 	position:relative;
 	margin:0 auto; /*center-aligned*/
     transform: translate3d(0,0,0);
